# rust-siphash

./: Cargo.toml  README.md
src/: lib.rs  sip.rs  sip128.rs  tests.rs  tests128.rs
