[package]
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["crypto","hash"]
license = "MIT/Apache-2.0"
name = "siphasher"
description = "SipHash functions from rust-core < 1.13"
repository = "https://github.com/jedisct1/rust-siphash"
homepage = "https://docs.rs/siphasher"
documentation = "https://docs.rs/siphasher"
readme = "README.md"
version = "0.1.3"

[dependencies]
