[package]
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["crypto","hash","siphash"]
license = "MIT/Apache-2.0"
name = "siphasher"
description = "SipHash-2-4, SipHash-1-3 and 128-bit variants in pure Rust"
repository = "https://github.com/jedisct1/rust-siphash"
homepage = "https://docs.rs/siphasher"
documentation = "https://docs.rs/siphasher"
readme = "README.md"
version = "0.3.1"
categories = ["algorithms", "cryptography"]

[badges]
travis-ci = { repository = "jedisct1/rust-siphash" }

[profile.release]
lto = true
panic = "abort"
opt-level = 3
